更新圖片內容

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!--<div class=" bg-cover bg-no-repeat bg-center" style="background-image: url('assets/images/bg.jpg');"></div>-->
 
-<div class="absolute inset-0 z-0 bg-cover bg-no-repeat" style="height: 10000px;">
+<div class="absolute inset-0 z-0 bg-cover bg-no-repeat" style="height: 15200px; overflow: hidden">
     <img src="assets/images/bg.jpg">
 </div>
 
@@ -65,9 +65,9 @@
             <img src="assets/images/junlin_37.png" alt="圖片">
         </div>
 
-        <div class="absolute w-screen flex justify-center top-[2515px] flex-wrap ">
+        <div class="absolute  flex justify-center top-[2515px] flex-wrap  absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
             <div class="w-[800px] flex justify-center flex-wrap">
-                <div class="z-20 lt_img_10 mb-[68px]">
+                <div class="z-20 lt_img_10 mb-[68px] ">
                     <img src="assets/images/mbook.png" alt="圖片">
                 </div>
                 <div class="lt_img_11 left-8 mb-[40px]">
@@ -90,8 +90,8 @@
     <div class="absolute  top-[3425px]  right-[233px]  st_img_3">
         <img src="assets/images/story_3.png" alt="圖片">
     </div>
-    <div class="absolute w-screen flex justify-center top-[3742px] flex-wrap ">
-        <div class="w-[700px] flex justify-center flex-wrap">
+    <div class="absolute  flex justify-center top-[3742px] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ">
+        <div class="w-[700px] flex justify-center flex-wrap ">
             <div class="st_img_4 mb-[100px]">
                 <img src="assets/images/story_4.png" alt="圖片">
             </div>
@@ -103,41 +103,41 @@
             </div>
         </div>
     </div>
-    <div class="absolute w-screen flex justify-center top-[4362px] flex-wrap ">
+    <div class="absolute  flex justify-center top-[4362px] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
         <div class="w-[1642px] h-[960px] border-2 border-gray-900">
             <img src="assets/images/illus.png" alt="圖片"
                  class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
         </div>
     </div>
-    <div class="absolute w-screen flex justify-center top-[5354px] flex-wrap ">
+    <div class="absolute  flex justify-center top-[5354px] flex-wrap ">
         <div class="lt_img_12 pt-12">
             <img src="assets/images/h_line.png" alt="圖片">
         </div>
     </div>
 </section>
 <section id="architect" class="relative">
-    <div class="absolute w-screen flex justify-center top-[5587px] flex-wrap ">
+    <div class="absolute  flex justify-center top-[5587px] relative top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
         <div class="lt_img_12 pt-12">
             <img src="assets/images/architect_1.png" alt="圖片">
         </div>
     </div>
-    <div class="absolute w-screen flex justify-center top-[5939px] flex-wrap ">
+    <div class="absolute  flex justify-center top-[5939px] relative top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ">
         <div class="lt_img_12 pt-12">
             <img src="assets/images/architect_2.png" alt="圖片">
         </div>
     </div>
 
-    <div class="absolute w-screen flex justify-center top-[6028px] flex-wrap ">
+    <div class="absolute  flex justify-center top-[6028px] relative top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ">
         <div class="lt_img_12 pt-12">
             <img src="assets/images/architect_avat.png" alt="圖片">
         </div>
     </div>
-    <div class="absolute w-screen flex justify-center top-[6609px] flex-wrap ">
+    <div class="absolute  flex justify-center top-[6609px] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ">
         <div class="lt_img_12 pt-12">
             <img src="assets/images/architect_3.png" alt="圖片">
         </div>
     </div>
-    <div class="absolute w-screen flex justify-center top-[6911px] flex-wrap ">
+    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2  flex justify-center top-[6911px]  ">
         <div class="w-[800px] flex justify-center flex-wrap">
             <div class="lt_img_12 pt-12">
                 <img src="assets/images/architect_4.png" alt="圖片">
@@ -150,35 +150,35 @@
 
 </section>
 <section id="memory" class="relative">
-    <div class="absolute w-screen flex justify-center top-[7347px] flex-wrap ">
+    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2  flex justify-center top-[7347px] flex-wrap ">
         <div class="mem_img_12 pt-12">
             <img src="assets/images/05 1.png" alt="圖片">
         </div>
     </div>
-    <div class="absolute w-screen flex justify-center top-[8350px] flex-wrap ">
-        <div class="flex justify-center flex-wrap">
-            <div class="lt_img_12 pt-12">
-                <img src="assets/images/m_sketch_1.png" alt="圖片">
+    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2  flex justify-center top-[8350px] flex-wrap ">
+        <div class="flex justify-center   w-[1500px] ">
+            <div class="lt_img_12 pt-12 flex-auto">
+                <img src="assets/images/m_sketch_1.png" alt="圖片" class="mix-blend-multiply	mix-blend-normal	mix-blend-screen	" style="mix-blend-mode: multiply;">
             </div>
             <div class="lt_img_12 pt-12">
                 <img src="assets/images/m_sketch_txt_1.png" alt="圖片">
             </div>
         </div>
-        <div class="flex justify-center flex-wrap">
-            <div class="lt_img_12 pt-12">
+        <div class="flex justify-center flex-wrap w-[1500px] ">
+            <div class="lt_img_12 pt-12 flex-auto">
                 <img src="assets/images/m_sketch_txt_2.png" alt="圖片">
             </div>
             <div class="lt_img_12 pt-12">
                 <img src="assets/images/m_sketch_2.png" alt="圖片">
             </div>
         </div>
-        <div class="absolute w-screen flex justify-center top-[950px] flex-wrap ">
+        <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2  flex justify-center top-[950px] flex-wrap ">
             <div class="mem_img_12 pt-12">
                 <img src="assets/images/01_1.png" alt="圖片">
             </div>
         </div>
 
-        <div class="absolute w-screen flex justify-center top-[2011px] flex-wrap ">
+        <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2  flex justify-center top-[2011px] flex-wrap ">
             <div class="w-[800px] flex justify-center flex-wrap">
                 <div class="mem_img_13 pt-12">
                     <img src="assets/images/m_txt_1.png" alt="圖片">
@@ -191,37 +191,67 @@
                 </div>
             </div>
         </div>
-        <div class="absolute w-screen flex justify-center top-[2700px] flex-wrap ">
+
+        <div class="absolute  flex justify-center top-[2700px] flex-wrap ">
             <div class="mem_img_12 pt-12">
                 <img src="assets/images/livingroom.png" alt="圖片">
             </div>
         </div>
 
-        <div class="absolute flex justify-center  top-[3800px] flex-wrap">
-            <div class="lt_img_12 pt-12">
+        <div class="absolute flex flex-wrap w-[1500px] top-[3800px] flex-auto">
+            <div class="lt_img_12 pt-12 flex-auto">
                 <img src="assets/images/room1.png" alt="圖片">
             </div>
             <div class="lt_img_12 pt-12">
                 <img src="assets/images/room_txt_1.png" alt="圖片">
+                <div class="lt_img_12 pt-6">
+                    <img src="assets/images/room2.png" alt="圖片">
+                </div>
             </div>
         </div>
-        <div class="absolute flex justify-center  top-[4362px] flex-wrap">
+        <div class="absolute flex  flex-wrap w-[1500px]  top-[4402px] flex-auto">
             <div class="lt_img_12 pt-12">
                 <img src="assets/images/room_txt_2.png" alt="圖片">
             </div>
-            <div class="lt_img_12 pt-12">
-                <img src="assets/images/room2.png" alt="圖片">
-            </div>
         </div>
-        <div class="absolute flex justify-center top-[4600px] flex-wrap">
-            <div class="lt_img_12 pt-12">
-                <img src="assets/images/room3.png" alt="圖片">
-            </div>
+        <div class="absolute flex  justify-center pl-20 top-[4530px] flex-wrap">
+            <img src="assets/images/room3.png" alt="圖片">
         </div>
     </div>
-
 </section>
-<section id="contact"></section>
-<footer id="footer"></footer>
+<section id="contact" class="relative">
+    <div class="relative  flex justify-center top-[13300px] flex-wrap ">
+        <div class="lt_img_12 pt-12 ">
+            <img src="assets/images/contact.png" alt="圖片">
+        </div>
+    </div>
+    <div class="relative  flex justify-center top-[13440px] flex-wrap ">
+        <div class="lt_img_12 pt-12">
+            <img src="assets/images/booking.png" alt="圖片">
+        </div>
+    </div>
+    <div class="relative  flex justify-center top-[13640px] flex-wrap ">
+        <div class="lt_img_12 pt-12">
+            <img src="assets/images/gmap.png" alt="圖片">
+        </div>
+    </div>
+</section>
+<footer id="footer" class="relative top-[13650px] h-[280px] bg-white  flex">
+    <div class="relative pl-28 pt-20 ">
+        <div class="">
+            <img src="assets/images/footer_left.png">
+        </div>
+    </div>
+    <div class="relative pt-20 pl-24">
+        <div class="">
+            <img src="assets/images/footer_content.png">
+        </div>
+    </div>
+    <div class="relative pt-20 pl-12">
+        <div class="">
+            <img src="assets/images/footer_right.png">
+        </div>
+    </div>
+</footer>
 </body>
 </html>
