--- a/index.html
+++ b/index.html
@@ -22,19 +22,36 @@
         <div class="absolute top-0 left-0">
             <img src="assets/images/logo_dudu.png" alt="Logo" class="pt-12 pl-12 h-1/2  w-1/2 xl:h-full xl:w-full">
         </div>
-        <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
-            <img src="assets/images/center_logo.png" alt="篤篤源" class="h-fit w-fit xl:h-fit xl:w-fit">
+        <div class="absolute pt-12 top-1/3 left-1/2 lg:top-1/2 lg:left-1/2 xl:top-1/2 xl:left-1/2 transform -translate-x-1/4 lg:-translate-x-1/3 lg:-translate-y-1/3 xl:-translate-x-1/2 xl:-translate-y-1/2">
+            <img src="assets/images/center_logo.png" class="h-auto w-1/2 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
         </div>
+
+        <div class="absolute kv_bike">
+            <img src="assets/images/bike.png" class="h-auto w-1/2 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
+        </div>
+        <div class="absolute kv_onegirl">
+            <img src="assets/images/onegirl.png" class="h-auto w-1/2 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
+        </div>
+        <div class="absolute kv_funpeople">
+            <img src="assets/images/funpeople.png" class="h-auto w-1/2 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
+        </div>
+        <div class="absolute kv_mandog">
+            <img src="assets/images/mandog.png" class="h-auto w-1/2 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
+        </div>
+        <div class="absolute kv_family">
+            <img src="assets/images/family.png" class="h-auto w-1/2 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
+        </div>
+
     </div>
 </section>
 <section id="literature" class="z-0 relative">
     <div class="relative flex">
-        <div class="absolute top-28 left-0 lt_img_1">
-            <img src="assets/images/water_park_61.png" class="">
+        <div class="absolute top-24 left-0 lt_img_1">
+            <img src="assets/images/water_park_61.png" class="h-auto w-1/3 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
         </div>
 
-        <div class="absolute top-0 right-1/4 lt_img_2">
-            <img src="assets/images/junlin_1.png" class="">
+        <div class="absolute top-0 right-8 lg:right-1/4 lt_img_2  translate-x-1/2 ">
+            <img src="assets/images/junlin_1.png" class="h-auto w-1/2 md:w-2/2  lg:w-3/4   xl:w-full">
         </div>
 
         <div class="absolute top-72  right-16 lt_img_3">
@@ -158,7 +175,9 @@
     <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2  flex justify-center top-[8350px] flex-wrap ">
         <div class="flex justify-center   w-[1500px] ">
             <div class="lt_img_12 pt-12 flex-auto">
-                <img src="assets/images/m_sketch_1.png" alt="圖片" class="mix-blend-multiply	mix-blend-normal	mix-blend-screen	" style="mix-blend-mode: multiply;">
+                <img src="assets/images/m_sketch_1.png" alt="圖片"
+                     class="mix-blend-multiply	mix-blend-normal	mix-blend-screen	"
+                     style="mix-blend-mode: multiply;">
             </div>
             <div class="lt_img_12 pt-12">
                 <img src="assets/images/m_sketch_txt_1.png" alt="圖片">
