--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
 <section id="literature" class="z-0 relative">
     <div class="relative flex">
         <div class="absolute top-24 left-0 lt_img_1">
-            <img src="assets/images/water_park_61.png" class="h-auto w-1/3 lg:w-2/3 lg:h-2/3 xl:h-full xl:w-full">
+            <img src="assets/images/water_park_61.png"
+                 class=" w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
         </div>
 
-        <div class="absolute top-0 right-8 lg:right-1/4 lt_img_2  translate-x-1/2 ">
-            <img src="assets/images/junlin_1.png" class="h-auto w-1/2 md:w-2/2  lg:w-3/4   xl:w-full">
+        <div class="absolute top-0 left-7/12 sm:left-8/12 md:left-7/12 lg:left-7/12 xl:left-7/12 lt_img_2 ">
+            <img src="assets/images/junlin_1.png"
+                 class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
         </div>
 
         <div class="absolute top-72  right-16 lt_img_3">
