--- a/index.html
+++ b/index.html
@@ -216,29 +216,25 @@
         </div>
         <div class="absolute flex flex-wrap w-full justify-center transform -translate-x-1/2
          sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-8/48  xl:left-1/2 ">
-            <div class="flex justify-center xl:w-40/48">
-                <div class="lt_img_12 pt-12 flex-auto">
-                    <img src="assets/images/m_sketch_1.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+            <div class="flex justify-center  ">
+                <div class="lt_img_12 pt-12 flex-auto pr-20">
+                    <img src="assets/images/m_sketch_1.png" alt="圖片">
                 </div>
                 <div class="lt_img_12 pt-12 flex-auto">
-                    <img src="assets/images/m_sketch_txt_1.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+                    <img src="assets/images/m_sketch_txt_1.png" alt="圖片">
                 </div>
             </div>
-            <div class="flex justify-center xl:w-40/48">
-                <div class="lt_img_12 pt-12 flex-auto">
-                    <img src="assets/images/m_sketch_txt_2.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+            <div class="flex justify-center ">
+                <div class="lt_img_12 pt-12 flex-auto pr-20">
+                    <img src="assets/images/m_sketch_txt_2.png" alt="圖片">
                 </div>
                 <div class="lt_img_12 pt-12">
-                    <img src="assets/images/m_sketch_2.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+                    <img src="assets/images/m_sketch_2.png" alt="圖片">
                 </div>
             </div>
         </div>
-        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-16/48  xl:left-1/2 ">
-            <div class="mem_img_12 ">
+        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-15/48  xl:left-1/2 ">
+            <div class="mem_img_12 pt-12">
                 <img src="assets/images/01_1.png" alt="圖片"
                      class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
             </div>
@@ -254,88 +250,87 @@
                     <img src="assets/images/m_txt_2.png" alt="圖片"
                          class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
                 </div>
-                <div class="mem_img_13 pt-12">
+                <div class="mem_img_13 pt-14">
                     <img src="assets/images/v_line.png" alt="圖片"
                          class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
                 </div>
             </div>
         </div>
 
-        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-29/48 xl:left-1/2 ">
-            <div class="mem_img_12 pt-12">
+        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-30/48 xl:left-1/2 ">
+            <div class="mem_img_12">
                 <img src="assets/images/livingroom.png" alt="圖片"
                      class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
             </div>
         </div>
 
         <div class="absolute flex flex-wrap w-full justify-center transform -translate-x-1/2
-        sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-37/48  xl:left-1/2 ">
-            <div class="flex justify-center xl:w-40/48">
-                <div class="lt_img_12 pt-12 flex-auto">
-                    <img src="assets/images/room1.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+         sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-38/48  xl:left-1/2 ">
+            <div class="flex justify-center  ">
+                <div class="lt_img_12 pt-20 flex-auto pr-20">
+                    <img src="assets/images/room1.png" alt="圖片">
                 </div>
-                <div class="lt_img_12 pt-12 flex-auto">
-                    <img src="assets/images/room_txt_1.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+                <div class="lt_img_12 pt-20 flex-auto">
+                    <img src="assets/images/room_txt_1.png" alt="圖片">
                 </div>
             </div>
-            <div class="flex justify-center xl:w-40/48">
-                <div class="lt_img_12 pt-12 flex-auto">
-                    <img src="assets/images/room_txt_2.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+            <div class="flex justify-center">
+                <div class="lt_img_12 pt-20 flex-auto pr-20">
+                    <img src="assets/images/room_txt_2.png" alt="圖片">
                 </div>
                 <div class="lt_img_12 pt-12">
-                    <img src="assets/images/room2.png" alt="圖片"
-                         class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+                    <img src="assets/images/room2.png" alt="圖片">
                 </div>
             </div>
-            <div class="room3  flex justify-center transform -translate-x-1/2
-                sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-46/48 xl:left-1/2 ">
-                <img src="assets/images/room3.png" alt="圖片">
+
+            <div class="absolute flex justify-center xl:top-46/48  xl:left-21/48 ">
+                <div class="room3   ">
+                    <img src="assets/images/room3.png" alt="圖片">
+                </div>
             </div>
         </div>
     </div>
 </section>
 
 <section id="contact" class="relative">
-    <div class="relative flex xl:h-[850px]">
-        <div class="relative  flex justify-center flex-wrap
-         sm:left-10/12 md:left-9/12  lg:left-9/12    xl:left-1/2 ">
+    <div class="relative flex xl:h-[1050px] ">
+        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-2/48  xl:left-1/2 ">
+
             <div class="lt_img_12 pt-12 ">
-                <img src="assets/images/contact.png" alt="圖片"
-                     class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+                <img src="assets/images/contact.png" alt="圖片">
             </div>
         </div>
-        <div class="relative  flex justify-center  flex-wrap
-         sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-2/48  xl:left-1/2 ">
+        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-8/12 xl:top-7/48  xl:left-1/2 ">
             <div class="lt_img_12 pt-12">
-                <img src="assets/images/booking.png" alt="圖片"
-                     class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+                <img src="assets/images/booking.png" alt="圖片">
             </div>
         </div>
-        <div class="relative  flex justify-center flex-wrap ">
-            <div class="lt_img_12 pt-12">
-                <img src="assets/images/gmap.png" alt="圖片"
-                     class="w-1/3 h-1/3 md:w-2/3 md:h-2/3 lg:w-3/4 lg:h-3/4  xl:h-full xl:w-full">
+        <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-15/48  xl:left-1/2  w-full">
+
+            <div class="flex justify-center ">
+                <div class="lt_img_12 pt-12">
+                    <img src="assets/images/gmap.png" alt="圖片" class="xl:w-[1920px]">
+                </div>
             </div>
         </div>
     </div>
 </section>
 <footer id="footer" class="relative bg-white  flex">
-    <div class="relative pl-28 pt-20 ">
-        <div class="">
-            <img src="assets/images/footer_left.png">
+    <div class="relative flex xl:h-[280px] ">
+        <div class="relative pt-20 pl-24">
+            <div class="">
+                <img src="assets/images/footer_left.png">
+            </div>
         </div>
-    </div>
-    <div class="relative pt-20 pl-24">
-        <div class="">
-            <img src="assets/images/footer_content.png">
+        <div class="relative pt-20 pl-24">
+            <div class="">
+                <img src="assets/images/footer_content.png">
+            </div>
         </div>
-    </div>
-    <div class="relative pt-20 pl-12">
-        <div class="">
-            <img src="assets/images/footer_right.png">
+        <div class="relative pt-20 pl-12">
+            <div class="">
+                <img src="assets/images/footer_right.png">
+            </div>
         </div>
     </div>
 </footer>
