修改百分比 可以把sm md lg補上

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header></header>
 
-<div class="bg-cover bg-no-repeat bg-center" style="background-image: url('assets/images/bg.jpg');">
+<div class="bg-cover bg-no-repeat bg-center sm:h-[8450px] md:h-[12450px] lg:h-[14450px]" style="background-image: url('assets/images/bg.jpg');">
 
     <section id="kv" class="z-10">
         <div class="relative flex ">
@@ -50,7 +50,7 @@
         </div>
     </section>
     <section id="literature" class="z-0 relative overflow-hidden">
-        <div class="relative flex  xl:h-[3400px]">
+        <div class="relative flex sm:h-[3400px] md:h-[3400px] lg:h-[3400px] xl:h-[3400px]">
             <div class="absolute top-24 left-0 lt_img_1">
                 <img src="assets/images/water_park_61.png"
                      class="  w-full h-full object-contain">
@@ -128,7 +128,7 @@
         </div>
     </section>
     <section id="story" class="relative">
-        <div class="relative flex flex-wrap  overflow-hidden w-full xl:h-[2450px]">
+        <div class="relative flex flex-wrap  overflow-hidden  sm:h-[2450px] md:h-[2450px] lg:h-[2450px] xl:h-[2450px]">
             <div class="absolute st_img_1  sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-4/48 xl:left-6/48">
                 <img src="assets/images/fuga_lane_21.png"
                      class=" w-full h-full object-contain">
@@ -160,10 +160,10 @@
             </div>
 
 
-            <div class="relative flex justify-center flex-wrap w-46/48 h-4/12 xl:top-24/48">
+            <div class="absolute flex justify-center flex-wrap w-full h-4/12 xl:top-24/48">
                 <div class="border-2 border-gray-900 w-full  sm:w-2/2 md:w-2/3 lg:w-4/4 xl:w-46/48"></div>
                 <img src="assets/images/illus.png" alt="插畫地圖"
-                     class="illus  absolute xl:top-1/2 border-2 border-gray-900 ">
+                     class="illus  absolute xl:top-1/2 ">
             </div>
             <div class="absolute  flex justify-center flex-wrap
          sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-44/48 xl:left-1/2 ">
@@ -175,7 +175,7 @@
         </div>
     </section>
     <section id="architect" class="relative">
-        <div class="relative flex xl:h-[2000px]">
+        <div class="relative flex h-[2000px] xl:h-[2000px]">
             <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:left-1/2 ">
                 <div class="lt_img_12 pt-12">
                     <img src="assets/images/architect_1.png" alt="圖片"
@@ -213,7 +213,7 @@
             </div>
     </section>
     <section id="memory" class="relative">
-        <div class="relative flex xl:h-[6250px]">
+        <div class="relative flex sm:h-[6250px] md:h-[6250px] lg:h-[6250px] xl:h-[6250px]">
             <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:left-1/2 ">
                 <div class="mem_img_12">
                     <img src="assets/images/05_1.png" alt="圖片"
@@ -299,7 +299,7 @@
     </section>
 
     <section id="contact" class="relative">
-        <div class="relative flex xl:h-[1050px] w-full">
+        <div class="relative flex sm:h-[1050px] md:h-[1050px] lg:h-[1050px] xl:h-[1050px] w-full">
             <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-2/48  xl:left-1/2 ">
                 <div class=" pt-12 ">
                     <img src="assets/images/contact.png" alt="圖片">
@@ -315,7 +315,7 @@
     </section>
 </div>
 <footer id="footer" class="relative bg-white flex">
-    <div class="relative flex xl:h-[280px] overflow-hidden">
+    <div class="relative flex sm:h-[280px]  md:h-[280px]  lg:h-[280px]   xl:h-[280px] overflow-hidden">
         <div class="relative pt-20 pl-24">
             <div class="">
                 <img src="assets/images/footer_left.png" class="w-full h-full object-contain">
