--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header></header>
 
-<div class="bg-cover bg-no-repeat bg-center sm:h-[8450px] md:h-[12450px] lg:h-[14450px]" style="background-image: url('assets/images/bg.jpg');">
+<div class="bg-cover bg-no-repeat bg-center " style="background-image: url('assets/images/bg.jpg');">
 
     <section id="kv" class="z-10">
         <div class="relative flex ">
@@ -50,7 +50,7 @@
         </div>
     </section>
     <section id="literature" class="z-0 relative overflow-hidden">
-        <div class="relative flex sm:h-[3400px] md:h-[3400px] lg:h-[3400px] xl:h-[3400px]">
+        <div class="relative flex sm:h-[3400px] md:h-[3400px] lg:h-[2800px] xl:h-[3400px]">
             <div class="absolute top-24 left-0 lt_img_1">
                 <img src="assets/images/water_park_61.png"
                      class="  w-full h-full object-contain">
@@ -59,27 +59,27 @@
                 <img src="assets/images/junlin_1.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-9/12 lt_img_3 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-2/24 xl:left-9/12">
+            <div class="absolute top-1/12 left-9/12 lt_img_3  xl:top-2/24 xl:left-9/12">
                 <img src="assets/images/coffee_house.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-2/12   sm:top-1/12 sm:left-2/12  md:top-1/12  md:left-2/12 lg:top-3/12  lg:left-2/12 xl:top-2/24 xl:left-7/24">
+            <div class="absolute top-1/12 left-3/12   xl:top-2/24 xl:left-7/24">
                 <img src="assets/images/people1.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-9/12   sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-11/24 xl:left-7/24">
+            <div class="absolute top-11/24 left-7/24 xl:top-11/24 xl:left-7/24">
                 <img src="assets/images/people2.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-9/12   sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-15/24 xl:left-10/12">
+            <div class="absolute top-15/24 left-10/12 xl:top-15/24 xl:left-10/12">
                 <img src="assets/images/people3.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-2/12   sm:top-1/12 sm:left-2/12  md:top-1/12  md:left-2/12 lg:top-3/12  lg:left-2/12 xl:top-6/24 xl:left-18/24">
+            <div class="absolute top-6/24 left-18/24  xl:top-6/24 xl:left-18/24">
                 <img src="assets/images/p_txt_1.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-9/12   sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-25/48 xl:left-6/24">
+            <div class="absolute  top-25/48 left-6/24xl:top-25/48 xl:left-6/24">
                 <img src="assets/images/p_txt_1.png"
                      class=" w-full h-full object-contain">
             </div>
@@ -91,9 +91,9 @@
                 <img src="assets/images/water_park_111.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute z-20 lt_img_5 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-8/48 xl:left-12/48">
+            <div class="absolute z-20 lt_img_5   top-8/48 left-12/48 xl:top-8/48 xl:left-12/48">
                 <img src="assets/images/water_park_12.png"
-                     class=" w-full h-full object-contain">
+                     class="md:1/2  lg:w-3/4  xl:w-10/12 2xl:w-full  object-contain">
             </div>
             <div class="absolute lt_img_6 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-19/48 xl:left-35/48">
                 <img src="assets/images/junlin_43.png"
@@ -214,7 +214,7 @@
     </section>
     <section id="memory" class="relative">
         <div class="relative flex sm:h-[6250px] md:h-[6250px] lg:h-[6250px] xl:h-[6250px]">
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:left-1/2 ">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:left-1/2  w-46/48 ">
                 <div class="mem_img_12">
                     <img src="assets/images/05_1.png" alt="圖片"
                          class=" w-full h-full object-contain">
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-15/48  xl:left-1/2 ">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-15/48  xl:left-1/2  w-46/48">
                 <div class="mem_img_12 pt-12">
                     <img src="assets/images/01_1.png" alt="圖片"
                          class=" w-full h-full object-contain">
@@ -263,7 +263,7 @@
                 </div>
             </div>
 
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-30/48 xl:left-1/2 ">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-30/48 xl:left-1/2  w-46/48">
                 <div class="mem_img_12">
                     <img src="assets/images/livingroom.png" alt="圖片"
                          class=" w-full h-full object-contain">
@@ -313,26 +313,27 @@
             <div id="map" class="xl:top-17/48 w-full xl:h-31/48 "></div>
         </div>
     </section>
+
+    <footer id="footer" class="relative bg-white flex">
+        <div class="relative flex sm:h-[280px]  md:h-[280px]  lg:h-[280px]   xl:h-[280px] overflow-hidden">
+            <div class="relative pt-20 pl-20">
+                <div class="">
+                    <img src="assets/images/footer_left.png" class="w-full h-full object-contain">
+                </div>
+            </div>
+            <div class="relative pt-20 pl-20">
+                <div class="">
+                    <img src="assets/images/footer_content.png" class="w-full h-full object-contain">
+                </div>
+            </div>
+            <div class="relative pt-20 pl-12 pr-20">
+                <div class="">
+                    <img src="assets/images/footer_right.png" class="w-full h-full object-contain">
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
-<footer id="footer" class="relative bg-white flex">
-    <div class="relative flex sm:h-[280px]  md:h-[280px]  lg:h-[280px]   xl:h-[280px] overflow-hidden">
-        <div class="relative pt-20 pl-24">
-            <div class="">
-                <img src="assets/images/footer_left.png" class="w-full h-full object-contain">
-            </div>
-        </div>
-        <div class="relative pt-20 pl-24">
-            <div class="">
-                <img src="assets/images/footer_content.png" class="w-full h-full object-contain">
-            </div>
-        </div>
-        <div class="relative pt-20 pl-12">
-            <div class="">
-                <img src="assets/images/footer_right.png" class="w-full h-full object-contain">
-            </div>
-        </div>
-    </div>
-</footer>
 <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzuazfEr3b3WWFfgj5QH6mExe_hklIh6M&callback=initMap&v=weekly"
         defer
